fix: Add custom focus outlines for dark mode button and searbox

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -85,6 +85,11 @@ dd {
 		font-weight: 600;
 		cursor: pointer;
 		color: var(--primary-text);
+		outline: none;
+
+		&:focus {
+			box-shadow: 0 0 0 2px var(--secondary-text);
+		}
 		&__icon {
 			@include icon-style(relative, margin-right, 0.25rem, 1rem);
 			top: 2px;
@@ -99,6 +104,10 @@ dd {
 	@include element-container-style();
 	display: flex;
 	align-items: center;
+
+	&:focus-within {
+		box-shadow: 0 0 0 2px var(--secondary-text);
+	}
 
 	&__icon {
 		@include icon-style(relative, margin-right, 0.5rem, 1.5rem, var(--secondary-text));
